--- a/server/.env
+++ b/server/.env
@@ -1,7 +1,7 @@
 JWT_SECRET = "test"
 TOKEN_EXPIRES = 240
 DB_USER="zifrkoks"
-DB_HOST="0.0.0.0:3307"
+DB_HOST="localhost:3307"
 DB_PASS="12345678Qwe"
 DB="deeplom"
-MODEL_SERVICE="0.0.0.0:8016"
+MODEL_SERVICE="localhost:8016"
