--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,7 +40,7 @@ services:
       - TOKEN_EXPIRES=240
       - MODEL_SERVICE=app_ml:8016
       - EMAIL_NAME=q92552189@gmail.com
-      - EMAIL_PASS=jzfe ojpp ggiq khyz
+      - EMAIL_PASS=mkrx gtbq qgip umng
     networks:
       - app-network
 
