--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -6,3 +6,10 @@ python-multipart>=0.0.9
 email-validator>=2.0
 python-dotenv>=1.0
 PyJWT>=2.3.0
+requests
+fastapi_jwt
+python-jose
+authlib
+pymysql
+pandas
+scikit-learn
