--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,16 +21,16 @@ services:
       interval: 5s
       timeout: 3s
       retries: 10
-  phpmyadmin:
-    image: phpmyadmin/phpmyadmin:latest
-    restart: always
-    ports:
-    - "8087:80"
-    environment:
-      PMA_HOST: mysql_db
-      MYSQL_ROOT_PASSWORD: root
-    networks:
-     - app-network
+  # phpmyadmin:
+  #   image: phpmyadmin/phpmyadmin:latest
+  #   restart: always
+  #   ports:
+  #   - "8087:80"
+  #   environment:
+  #     PMA_HOST: mysql_db
+  #     MYSQL_ROOT_PASSWORD: root
+  #   networks:
+  #    - app-network
   app:
     container_name: backend
     build: ./server
